changed background to be fixed on mobile.

--- a/modern-backbone-starterkit/src/styles/main.styl
+++ b/modern-backbone-starterkit/src/styles/main.styl
@@ -2,10 +2,7 @@
 
 .kmw-app {
   background-color: #f5f8fa;
-  background-image: url("/images/sky-604411.jpg");
-  //background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5) ), url("/images/sky-604411.jpg");
-  //background-image:
-  background-attachment: fixed;
-  min-height: 100vh;
-
+  background: url("/images/sky-604411.jpg") fixed;
+  overflow-y: scroll;
+  height: 100vh;
 }
